--- a/models/pyproject.toml
+++ b/models/pyproject.toml
@@ -1,19 +1,17 @@
-# Poetry 가상 환경 설정 및 시작하기
-# 1. 이 폴더에서 터미널을 열고 'poetry install'을 실행하여 의존성을 설치
-# 2. 'poetry shell'을 실행하여 가상 환경을 활성화
-
 [tool.poetry]
 name = "models"
 version = "0.1.0"
 description = ""
-authors = ["jjw"]
+authors = ["Jang jaewon <8chris8@naver.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
-numpy = "^1.21"
-pandas = "^1.3.3"
-matplotlib = "3.3.4"
+python = "^3.9"
+numpy = "^1.26.4"
+pandas = "^2.2.1"
+matplotlib = "^3.8.3"
+scikit-learn = "^1.4.1.post1"
+
 
 [build-system]
 requires = ["poetry-core"]
